Add Edit Comment Class and changed button action to point to UpdateStatusServlet

--- a/Edit-Comment-View/edit-comment.html
+++ b/Edit-Comment-View/edit-comment.html
@@ -25,9 +25,9 @@
     
     <div class="action-items">
       <h3>Action Items</h3>
-      <button type="button">Remove Edit</button>
-      <button type="button">Warn User</button>
-      <button type="button">Suggest User Ban</button>
+      <button action="/update-status" type="button">Remove Edit</button>
+      <button action="/update-status" type="button">Warn User</button>
+      <button action="/update-status" type="button">Suggest User Ban</button>
     </div>
   </body>
 </html>
