--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>User Profile Page</title>
-	    <link rel="stylesheet" type="text/css" href="userprofile.css">
+	    <title>Discover</title>
+	    <link rel="stylesheet" type="text/css" href="discover-style.css">
         <!-- Add bootstap, jQuery, and datatables -->
         <link rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
         crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
         crossorigin="anonymous"></script>
@@ -27,29 +29,30 @@
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     </head>
     <body onload="getUser()">
-    	<div id="user-name-container">
-    		<header id="user-name"></header>
-    	</div>
-        
-        <section id="content">
-        	<section id="user-information">
-            	<div id="personal-information-box"></div>
-            	<div id="toxicity-score-box"></div>
-        	</section>
-        	<br>
-        	<section id="user-edits">
-        		<div id="edits-container">
-                    <h3>Edits</h3>
-                    <div id="table-container"></div>
-                        <table class="table table-fluid" id="my-table">
-                            <thead>
-                                <tr><th>Toxicity %</th><th>User Name</th><th>Article</th><th>Edit Comment</th><th>Date</th></tr>
-                            </thead>
-                            <tbody id="edits-table"></tbody>
-                        </table>
-            	</div>
-        	</section>
-        </section>
-        <script src="userprofile.js"></script>
+      <div class="dashboard-header w3-card w3-#f8f9fa"> 
+        <div class="nav-container">
+          <div class="nav-brand">
+           <a href="/"> 
+             WikiLoop IncivilityCheck
+           </a>
+          </div>
+          <div class="user-loggedin ">
+            Tom
+          </div>
+        </div>
+      </div>
+      <div class="dashboard-content">
+        <div class="dashboard-feed w3-round w3-card "> 
+          <div id="table-container">
+            <table class="table table-fluid " id="my-table">
+              <thead>
+                <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
+              </thead>
+              <tbody id="edits-table" style="text-align:center;"></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <script src="discover.js"></script>
     </body>
 </html>
