--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -19,20 +19,27 @@
   </head>
 
   <body onload="getDetailedEdit()">
-      <div class="dashboard-header w3-card w3-lightgrey"> 
-        <div class="user-loggedin w3-card w3-white">
-          <a href="/userprofile.html">Tom</a>
+    <div class="dashboard-header w3-card w3-#f8f9fa">
+      <div class="nav-container">
+        <div class="nav-brand">
+          <a href="/">
+            WikiLoop IncivilityCheck
+          </a>
+        </div>
+        <div class="user-loggedin ">
+          Tom
         </div>
       </div>
-    <section class="section w3-card w3-lightgrey">
+    </div>
+    <section class="section w3-round w3-card">
       <br>
-      <h1>Detailed Edit View</h1><br>
+      <h3><b>Detailed Edit View</b></h3><br>
       <div class="edit-info">
         <table>
           <tbody>
             <tr>
               <td id="date"></td>
-            <tr>
+            </tr>
             <tr>
               <td><b id="username"></b></td>
             </tr>
@@ -49,7 +56,9 @@
         <div class="toxicity">
           <h4>Toxicity Score</h4>
           <h1>
-            <span title=" This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives."><div id="toxic-score"></div></span>
+            <span title=" This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives.">
+              <div id="toxic-score"></div>
+            </span>
           </h1>
         </div>
         <div class="action-items">
