--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@
            </a>
           </div>
           <div class="user-loggedin ">
-            Tom
+            <a href="userprofile.html">Tom</a>
           </div>
         </div>
       </div>
