--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -10,6 +10,8 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
         crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
         crossorigin="anonymous"></script>
@@ -27,30 +29,33 @@
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     </head>
     <body onload="getUser()">
-        <div class="user-profile-header w3-card w3-lightgrey">
-            <div class="discover-link w3-card w3-white">
-                <a href="index.html">Discover</a>
-            </div>
-            <div class="user-name w3-card w3-white">
+        <div class="user-profile-header w3-card w3-#f8f9fa">
+            <div class="nav-container">
+                <div class="nav-brand">
+                    <a href="index.html">WikiLoop IncivilityCheck</a>
+                </div>
+                <div class="user-loggedin">
+                    <a href="userprofile.html">Tom</a>
+                </div>
             </div>
         </div>
         
         <div class="user-profile-content">
-        	<section id="user-information w3-card w3-lightgrey">
-            	<div id="personal-information-box"></div>
-            	<div id="toxicity-score-box"></div>
-        	</section>
-        	<br>
-        	<div class="user-edits-feed w3-card w3-lightgrey">
-                <div class="edits-title">
-                    <h1>Edits</h1>
-                </div>
+        	<div class="user-information">
+            	<class class="personal-information-box w3-round w3-card ">
+                    <div id="personal-information">Personal Information</div>
+                </class>
+            	<class class="incivility-box w3-round w3-card ">
+                    <div id="incivility">Incivility</div>
+                </class>
+        	</div>
+        	<div class="user-edits-feed w3-round w3-card ">
         		<div id="table-container">
                     <table class="table table-fluid" id="my-table">
                         <thead>
-                            <tr><th>Toxicity %</th><th>Revision ID</th><th>User Name</th><th>Edit Comment</th><th>Article</th><th>Date</th></tr>
+                            <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th></tr>
                         </thead>
-                        <tbody id="edits-table"></tbody>
+                        <tbody id="edits-table" style="text-align:center;"></tbody>
                     </table>
             	</div>
         	</div>
