--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -63,7 +63,7 @@
         </div>
         <div class="action-items">
           <h6>Action Items</h6>
-          <div></div>
+          <div class="actions-taken"></div>
           <button action="/update-status" type="button">Remove Edit</button>
           <button action="/update-status" type="button">Warn User</button>
           <button action="/update-status" type="button">Suggest User Ban</button>
