A few changes for datastore

--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -43,10 +43,10 @@
         <div class="user-profile-content">
         	<div class="user-information">
             	<class class="personal-information-box w3-round w3-card ">
-                    <div id="personal-information">Personal Information</div>
+                    <div id="personal-information"></div>
                 </class>
             	<class class="incivility-box w3-round w3-card ">
-                    <div id="incivility">Incivility</div>
+                    <div id="incivility"></div>
                 </class>
         	</div>
         	<div class="user-edits-feed w3-round w3-card ">
