--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -36,7 +36,7 @@
                     <a href="index.html">WikiLoop IncivilityCheck</a>
                 </div>
                 <div class="user-loggedin">
-                    <a href="userprofile.html">Tom</a>
+                    <a href="userprofile.html"><div id="user-name-section"></div></a>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
         		<div id="table-container">
                     <table class="table table-fluid" id="my-table">
                         <thead>
-                            <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th></tr>
+                            <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
                         </thead>
                         <tbody id="edits-table" style="text-align:center;"></tbody>
                     </table>
