--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -57,13 +57,16 @@
           <h4>Toxicity Score</h4>
           <h1>
             <span title=" This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives.">
-              <div id="toxic-score"></div>
+              <div id="label"></div>
+              <div id="score"></div>
+              <div id="reason"></div>
+              <div id="experimental"></div>
             </span>
           </h1>
         </div>
         <div class="action-items">
           <h6>Action Items</h6>
-          <div></div>
+          <div class="actions-taken">Jane took the Remove Edit action</div>
           <button action="/update-status" type="button">Remove Edit</button>
           <button action="/update-status" type="button">Warn User</button>
           <button action="/update-status" type="button">Suggest User Ban</button>
