--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -54,18 +54,18 @@
       </div><br>
       <div class="toxic-info">
         <div class="toxicity">
-          <h4>Toxicity Score</h4>
+          <span title=" This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives.">
+            <h4>Toxicity Score</h4>
+          </span>
           <h1>
-            <span title=" This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives.">
               <div id="label"></div>
               <div id="score"></div>
               <div id="reason"></div>
               <div id="experimental"></div>
-            </span>
           </h1>
         </div>
         <div class="action-items">
-          <h6>Action Items</h6>
+          <h6>Take Action</h6>
           <div class="actions-taken">Jane took the Remove Edit action</div>
           <button action="/update-status" type="button">Remove Edit</button>
           <button action="/update-status" type="button">Warn User</button>
