--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,12 @@
       <div class="dashboard-content">
         <div class="dashboard-feed w3-round w3-card "> 
           <div id="table-container">
+            <div>
+              <form action="#" onsubmit="loadData();return false">
+                Seacrch Revision ID(s)
+              <input type="text" id="revids" name="ids"></input>
+              </form>
+            </div>
             <table class="table table-fluid " id="my-table">
               <thead>
                 <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
