--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -16,22 +16,16 @@
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>    
+    <script> 
+      $(function(){
+      $("#template").load("template.html"); 
+      });
+    </script> 
   </head>
-
   <body>
-    <div class="dashboard-header w3-card w3-#f8f9fa">
-      <div class="nav-container">
-        <div class="nav-brand">
-          <a href="/">
-            WikiLoop IncivilityCheck
-          </a>
-        </div>
-        <div class="user-loggedin ">
-          Tom
-        </div>
-      </div>
-    </div>
-    <section class="section w3-round w3-card">
+    <div id="template"></div>
+    <div class="section w3-round w3-card">
       <br>
       <h3><b>Detailed Edit View</b></h3><br>
       <div class="edit-info">
@@ -54,9 +48,7 @@
       </div><br>
       <div class="toxic-info">
         <div class="toxicity">
-          <span title=" This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives.">
-            <h4>Report</h4>
-          </span>
+          <h4>Report</h4>
           <div>
               <div id="label"></div>
               <div id="score"></div>
@@ -67,12 +59,11 @@
         <div class="action-items">
           <h6><b>Take Action</b></h6>
           <div class="actions-taken">Jane took the Remove Edit action</div><br>
-          <button action="/update-status" type="button">Remove Edit</button>
-          <button action="/update-status" type="button">Warn User</button>
-          <button action="/update-status" type="button">Suggest User Ban</button>
+          <button action="/update-status" type="button">Looks good</button>
+          <button action="/update-status" type="button">Not sure</button>
+          <button action="/update-status" type="button">Should report</button>
         </div><br>
       </div>
-    </section>
+    </div>
   </body>
-
 </html>
