Improved Storage/ Code cleaning

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
         href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     </head>
-    <body onload="getUser()">
+    <body>
       <div class="dashboard-header w3-card w3-#f8f9fa"> 
         <div class="nav-container">
           <div class="nav-brand">
@@ -47,7 +47,7 @@
           <div id="table-container">
             <div>
               <form action="#" onsubmit="loadData();return false">
-                Seacrch Revision ID(s)
+                Search Revision ID(s)
               <input type="text" id="revids" name="ids"></input>
               </form>
             </div>
