--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -27,7 +27,7 @@
           </a>
         </div>
         <div class="user-loggedin ">
-          Tom
+         Giano II
         </div>
       </div>
     </div>
