Added spelling correction

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@
            </a>
           </div>
           <div class="user-loggedin ">
-            <a href="userprofile.html">Tom</a>
+            <a href="userprofile.html">Giano II</a>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
           <div id="table-container">
             <div>
               <form action="#" onsubmit="loadData();return false">
-                Seacrch Revision ID(s)
+                Search Revision ID(s)
               <input type="text" id="revids" name="ids"></input>
               </form>
             </div>
