--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -58,10 +58,10 @@
           <div class="action">
             <h6><b>Take Action</b></h6>
             <div class="w3-center">
-             <form action="update" class="w3-bar">
-                <input value="Looks good" type="button" class="w3-bar-item w3-button w3-hover-green w3-border w3-border-green" />
-                <input value="Not sure" type="button" class="w3-bar-item w3-button w3-border" />
-                <input value="Should report" type="button" class="w3-bar-item w3-button w3-hover-red w3-border w3-border-red" />
+             <form action="/actions" class="w3-bar">
+                <input name="good" id="good" value="Looks good" type="button" class="w3-bar-item w3-button w3-hover-green w3-border w3-border-green" />
+                <input name="notsure" id="notsure" value="Not sure" type="button" class="w3-bar-item w3-button w3-border" />
+                <input name="report" id="report" value="Should report" type="button" class="w3-bar-item w3-button w3-hover-red w3-border w3-border-red" />
                 <input type="submit" value="Submit" class="w3-bar-item w3-button w3-hover-grey w3-border w3-border-grey" />
               </form>
             </div>
