--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,8 +33,13 @@
         <div class="nav-container">
           <div class="nav-brand">
            <a href="/"> 
-             WikiLoop IncivilityCheck
+             WikiLoop CivilityCheck
            </a>
+          </div>
+          <div>
+            <a href="slider.html" class="material-icons"> 
+              view_carousel
+            </a>
           </div>
           <div class="user-loggedin ">
             <a href="userprofile.html">Giano II</a>
@@ -56,8 +61,14 @@
               </thead>
               <tbody id="edits-table" style="text-align:center;"></tbody>
             </table>
+            <br></br>
+            <i> 
+              The incivility percentage and label comes from Jigsaw and Google's Counter Abuse Technology team's Perspective API, a machine learning model to detect abuse and harassment. You can learn more about the API <a href="https://support.perspectiveapi.com/s/about-the-api/">here</a>.
+              Since this API utilizes a machine learning model to detect incivility, the percentages and labels are not guaranteed to be accurate and might contain false positives.
+            </i>
           </div>
         </div>
+        
       </div>
       <script src="discover.js"></script>
     </body>
