--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
           <div id="table-container">
             <div>
               <form action="#" onsubmit="loadData();return false">
-                Search Revision ID(s)
+                Find Revision ID(s)
               <input type="text" id="revids" name="ids"></input>
               </form>
             </div>
@@ -68,7 +68,7 @@
             </table>
             <br></br>
             <i> 
-              The incivility percentage and label comes from Jigsaw and Google's Counter Abuse Technology team's Perspective API, a machine learning model to detect abuse and harassment. You can learn more about the API <a href="https://support.perspectiveapi.com/s/about-the-api/">here</a>.
+              The incivility percentage and label comes from Jigsaw and Google's Counter Abuse Technology team's Perspective API, a machine learning model to detect abuse and harassment. You can learn more about the API <a style="color: blue;" href="https://support.perspectiveapi.com/s/about-the-api/">here</a>.
               Since this API utilizes a machine learning model to detect incivility, the percentages and labels are not guaranteed to be accurate and might contain false positives.
             </i>
           </div>
