--- a/src/main/webapp/actions.html
+++ b/src/main/webapp/actions.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detailed Edit View</title>
+    <title>Actions</title>
     <script src="status.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Add bootstap, jQuery, and datatables -->
