--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -39,7 +39,9 @@
       </div>
     </div>
     <div class="footer">
-      <p>This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives. To learn more, <a target="_blank" href="https://www.perspectiveapi.com/#/home">click here</a>.</p>
+      <p>The incivility percentage and label comes from Jigsaw and Google's Counter Abuse Technology team's Perspective API, a machine learning model to detect abuse and harassment. <br>
+          You can learn more about the API <a target="_blank" href="https://www.perspectiveapi.com/#/home">here</a>. Since this API utilizes a machine learning model to detect incivility, the percentages and labels are not guaranteed to be accurate 
+          and might contain false positives</p>
     </div>
   </body>
 </html>
