--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -30,10 +30,10 @@
     <div class="dashboard-header w3-card w3-#f8f9fa">
       <div class="nav-container">
         <div class="nav-brand">
-          <a href="index.html">WikiLoop IncivilityCheck</a>
+          <a href="index.html">WikiLoop CivilityCheck</a>
         </div>
         <div class="user-loggedin ">
-          <a href="userprofile.html"><div id="user-name-section"></div></a>
+          <a href="userprofile.html">Giano II</a>
         </div>
       </div>
     </div>
