Add action page (not currently functional) and flag button to flag toxicity scores

--- a/src/main/webapp/actions.html
+++ b/src/main/webapp/actions.html
@@ -26,7 +26,10 @@
 
   <body onload="getActions()">
     <div id="template"></div>
-    <div id="container"></div>
+    <div class="w3-container">
+      <ul class="container w3-ul w3-hoverable w3-padding-large">
+      </ul>
+    </div>
   </body>
 
 </html>
