--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -31,7 +31,7 @@
     <div class="dashboard-header w3-card w3-#f8f9fa">
       <div class="nav-container">
         <div class="nav-brand">
-          <a href="index.html">WikiLoop IncivilityCheck</a>
+          <a href="index.html">WikiLoop CivilityCheck</a>
         </div>
         <div class="user-loggedin ">
           <a href="userprofile.html"><div id="user-name-section"></div></a>
@@ -40,7 +40,7 @@
     </div>
     <div class="footer">
       <p>The incivility percentage and label comes from Jigsaw and Google's Counter Abuse Technology team's Perspective API, a machine learning model to detect abuse and harassment. <br>
-          You can learn more about the API <a target="_blank" href="https://www.perspectiveapi.com/#/home">here</a>. Since this API utilizes a machine learning model to detect incivility, the percentages and labels are not guaranteed to be accurate 
+          You can learn more about the API <a target="_blank" href="https://support.perspectiveapi.com/s/about-the-api/">here</a>. Since this API utilizes a machine learning model to detect incivility, the percentages and labels are not guaranteed to be accurate 
           and might contain false positives</p>
     </div>
   </body>
