--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -1,4 +1,4 @@
-<!--DOCTYTYPE html-->
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -21,44 +21,39 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
         crossorigin="anonymous"></script>
-        <script src="http://code.jquery.com/jquery-3.5.1.js" 
+        <script src="https://code.jquery.com/jquery-3.5.1.js" 
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
         crossorigin="anonymous"></script>
         <link rel="stylesheet"
         href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+        <script> 
+          $(function(){
+          $("#template").load("template.html"); 
+          });
+        </script> 
     </head>
     <body onload="getUser()">
-        <div class="user-profile-header w3-card w3-#f8f9fa">
-            <div class="nav-container">
-                <div class="nav-brand">
-                    <a href="index.html">WikiLoop IncivilityCheck</a>
-                </div>
-                <div class="user-loggedin">
-                    <a href="userprofile.html"><div id="user-name-section"></div></a>
-                </div>
-            </div>
-        </div>
-        
+        <div id="template"></div>
         <div class="user-profile-content">
-        	<div class="user-information">
-            	<class class="personal-information-box w3-round w3-card ">
+            <div class="user-information">
+                <class class="personal-information-box w3-round w3-card ">
                     <div id="personal-information"></div>
                 </class>
-            	<class class="incivility-box w3-round w3-card ">
+                <class class="incivility-box w3-round w3-card ">
                     <div id="incivility"></div>
                 </class>
-        	</div>
-        	<div class="user-edits-feed w3-round w3-card ">
-        		<div id="table-container">
+            </div>
+            <div class="user-edits-feed w3-round w3-card ">
+                <div id="table-container">
                     <table class="table table-fluid" id="my-table">
                         <thead>
                             <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
                         </thead>
                         <tbody id="edits-table" style="text-align:center;"></tbody>
                     </table>
-            	</div>
-        	</div>
+                </div>
+            </div>
         </div>
         <script src="userprofile.js"></script>
     </body>
