--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -2,9 +2,10 @@
 <html>
   <head>
         <meta charset="UTF-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Template</title>
-	    <link rel="stylesheet" type="text/css" href="style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Template</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
         <!-- Add bootstap, jQuery, and datatables -->
         <link rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -26,7 +27,7 @@
         crossorigin="anonymous"></script>
   </head> 
   <!--USER JS AND FIX TEMPLATE FILE-->
-  <body onload="getUsername()">
+  <body>
     <div class="dashboard-header w3-card w3-#f8f9fa">
       <div class="nav-container">
         <div class="nav-brand">
@@ -38,7 +39,7 @@
       </div>
     </div>
     <div class="footer">
-      <p>This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives.</p>
+      <p>This score is derived from the results of the Perspective API. The API is not 100% accurate and may give fake positives and/or negatives. To learn more, <a target="_blank" href="https://www.perspectiveapi.com/#/home">click here</a>.</p>
     </div>
   </body>
 </html>
