--- a/src/main/webapp/slider.html
+++ b/src/main/webapp/slider.html
@@ -94,11 +94,12 @@
           <div class="dashboard-subtitle-action w3-bar">
             <form method="post" action="/retrieve">
             <input id="hidden-id" name="revid" style="display: none">
+            <input id="hidden-user" name="user" style="display: none">
               <div class="w3-center">
                 <div class="radio-toolbar">
                   <div class="flagged">
-                    <span class="material-icons">flag</span><br>
                     <input type="checkbox" name="flag" value="flag">
+                    <label for="flag" class="material-icons">flag</label><br>
                   </div>
                   <input type="radio" id="good" name="btn" value="g" checked>
                   <label for="good">Looks good (g)</label>
