--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,10 +55,31 @@
         <div class="dashboard-feed w3-round w3-card "> 
           <div id="table-container">
             <div>
-              <form action="#" onsubmit="loadData();return false">
-                Find Revision ID(s)
-              <input type="text" id="revids" name="ids"></input>
+              <form action="#" id="revidsF" onsubmit="getComments('revid'); return false">
+                Query by Revision ID(s)
+              <input type="text" name="revid" id="revids" name="ids"></input>
               </form>
+              <br></br>
+              <form action="#" id="articleForm" onsubmit="getComments('article'); return false">
+                Query by Article(s)
+              <input type="text" name="articlename" id="articles" name="article"></input>
+              Time Range 
+              Start Date: <input type="text" name="startDate" id="startDate"></input>
+              &nbsp;
+              End Date: <input type="text" name="endDate" id="endDate" </input>
+              <input type="submit">
+              </form>
+              <br></br>
+              <form action="#" id="userForm" onsubmit="getComments('user'); return false">
+                Query by Username(s)
+              <input type="text" name="user" id="userNames" ></input>
+              Time Range 
+              Start Date: <input type="text" name="startDate" id="startDate"></input>
+              &nbsp;
+              End Date: <input type="text" name="endDate" id="endDate" </input>
+              <input type="submit">
+              </form>
+               
             </div>
             <table class="table table-fluid " id="my-table">
               <thead>
