--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,28 +58,28 @@
               <form action="#" id="revidsF" onsubmit="getComments('revid'); return false">
                 Query by Revision ID(s)
               <input type="text" name="revid" id="revids" name="ids"></input>
+              <input type="submit">
               </form>
-              <br></br>
+              <!-- Expansion for querying different revision by article and user. Don't know perspective API limits to allow user to query
               <form action="#" id="articleForm" onsubmit="getComments('article'); return false">
                 Query by Article(s)
               <input type="text" name="articlename" id="articles" name="article"></input>
-              Time Range 
+              <br/>
               Start Date: <input type="text" name="startDate" id="startDate"></input>
               &nbsp;
               End Date: <input type="text" name="endDate" id="endDate" </input>
               <input type="submit">
               </form>
-              <br></br>
               <form action="#" id="userForm" onsubmit="getComments('user'); return false">
                 Query by Username(s)
               <input type="text" name="user" id="userNames" ></input>
-              Time Range 
+               <br/>
               Start Date: <input type="text" name="startDate" id="startDate"></input>
               &nbsp;
               End Date: <input type="text" name="endDate" id="endDate" </input>
               <input type="submit">
-              </form>
-               
+              </form> -->
+              </div>
             </div>
             <table class="table table-fluid " id="my-table">
               <thead>
