Add action history page and fix flag button

--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -72,8 +72,8 @@
               <div class="w3-center">
                 <div class="radio-toolbar">
                   <div class="flagged">
-                    <span class="material-icons">flag</span><br>
-                    <input type="checkbox" name="flag" value="flag">
+                    <input type="checkbox" id="flag" name="flag" value="flag">
+                    <label for="flag" class="material-icons">flag</label>
                   </div>
                   <input type="radio" id="good" name="btn" value="g" checked>
                   <label for="good">Looks good (g)</label>
