Updated the Datastore

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -7,7 +7,7 @@
 	    <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
         <!-- Add bootstap, jQuery, and datatables -->
-        <link rel="stylesheet" 
+        <!--link rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
         crossorigin="anonymous">
@@ -24,7 +24,7 @@
         crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.js" 
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script-->
   </head> 
   <!--USER JS AND FIX TEMPLATE FILE-->
   <body>
