Fix id issue in status.js

--- a/src/main/webapp/actions.html
+++ b/src/main/webapp/actions.html
@@ -27,7 +27,7 @@
   <body onload="getActions()">
     <div id="template"></div>
     <div class="w3-container">
-      <ul class="container w3-ul w3-hoverable w3-padding-large">
+      <ul id="container" class="container w3-ul w3-hoverable w3-padding-large">
       </ul>
     </div>
   </body>
