Actions list is functional (TODO: change action statements)

--- a/src/main/webapp/actions.html
+++ b/src/main/webapp/actions.html
@@ -26,7 +26,7 @@
 
   <body onload="getActions()">
     <div id="template"></div>
-    <div class="w3-container">
+    <div id="list-div" class="w3-container">
       <ul id="container" class="container w3-ul w3-hoverable w3-padding-large">
       </ul>
     </div>
