--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,6 +53,7 @@
       </div>
       <div class="dashboard-content">
         <div class="dashboard-feed w3-round w3-card "> 
+          <div id="discover-loader" class="loader"></div>
           <div id="table-container">
             <div>
               <form action="#" id="revidsF" onsubmit="getComments('revid'); return false">
@@ -80,7 +81,7 @@
               <input type="submit">
               </form> -->
               </div>
-            </div>
+            
             <table class="table table-fluid " id="my-table">
               <thead>
                 <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
@@ -92,10 +93,12 @@
               The incivility percentage and label comes from Jigsaw and Google's Counter Abuse Technology team's Perspective API, a machine learning model to detect abuse and harassment. You can learn more about the API <a target="_blank" style="color: blue;" href="https://support.perspectiveapi.com/s/about-the-api/">here</a>.
               Since this API utilizes a machine learning model to detect incivility, the percentages and labels are not guaranteed to be accurate and might contain false positives.
             </i>
+            </div>
           </div>
         </div>
-        
       </div>
       <script src="discover.js"></script>
+      <!-- Module to handle Document Cookies -->
+      <script nomodule defer src="/path/to/js.cookie.js"></script>
     </body>
 </html>
