Add material icon link to actions page in the header

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,9 @@
             <a href="slider.html" class="material-icons"> 
               view_carousel
             </a>
+            <a href="/actions.html" class="material-icons">
+              history
+            </a>
           </div>
           <div class="user-loggedin ">
             <a href="userprofile.html">Giano II</a>
