--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -33,6 +33,12 @@
         <div class="nav-brand">
           <a href="index.html">WikiLoop CivilityCheck</a>
         </div>
+            <a href="/" class="material-icons"> 
+              view_list
+            </a>
+            <a href="/actions.html" class="material-icons">
+              history
+            </a>
         <div class="user-loggedin ">
           <a href="userprofile.html">Giano II</a>
         </div>
