--- a/src/main/webapp/edit-comment.html
+++ b/src/main/webapp/edit-comment.html
@@ -8,6 +8,7 @@
     <script src="edit-comment-script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Add bootstap, jQuery, and datatables -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -16,64 +17,80 @@
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script> 
-      $(function(){
-      $("#template").load("template.html"); 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script>
+      $(function() {
+        $("#template").load("template.html");
       });
-    </script> 
+
+    </script>
   </head>
+
   <body>
-    <div class="dashboard-header w3-card w3-#f8f9fa">
-      <div class="nav-container">
-        <div class="nav-brand">
-          <a href="/">
-            WikiLoop IncivilityCheck
-          </a>
-        </div>
-        <div class="user-loggedin ">
-         Giano II
-        </div>
-      </div>
-    </div>
-    <section class="section w3-round w3-card">
-      <br>
-      <h3><b>Detailed Edit View</b></h3><br>
-      <div class="edit-info">
-        <table>
-          <tbody>
-            <tr>
-              <td id="date"></td>
-            </tr>
-            <tr>
-              <td><b id="username"></b></td>
-            </tr>
-            <tr>
-              <td id="edit-comment"></td>
-            </tr>
-            <tr>
-              <td><em><a id="article"></a></em></td>
-            </tr>
-          </tbody>
-        </table><br>
-      </div><br>
-      <div class="toxic-info">
-        <div class="toxicity">
-          <h4>Report</h4>
-          <div>
-              <div id="label"></div>
-              <div id="score"></div>
-              <div id="reason"></div>
-              <div id="experimental"></div>
+    <div id=template></div>
+    <section class="feed w3-round w3-card">
+      <h3><b>[[<a target="_blank" style="color: #057eff" id="article"></a>]]</b><sup><a style="color: #057eff" target="_blank" id="rev-id"></a></sup></h3><br>
+      <div class="dashboard-subtitle">
+        <div class="discover-subtitle-score-container">
+          <div class="discover-score-title">
+            Incivility:
           </div>
+          <div><span id="score" style="color:red;"></span></div>
         </div>
-        <div class="action-items">
-          <h6><b>Take Action</b></h6>
-          <div class="actions-taken">Jane took the Remove Edit action</div><br>
-          <button action="/update-status" type="button">Looks good</button>
-          <button action="/update-status" type="button">Not sure</button>
-          <button action="/update-status" type="button">Should report</button>
-        </div><br>
+        <div class="slider-subheader">
+          Date:
+          <div id="date"></div>
+        </div>
+        <div class="slider-subheader">
+          By User:
+          <div><a id="user" target="_blank"></a></div>
+        </div>
       </div>
-    </div>
+
+      <h2>Edit Comment</h2>
+      <div class="edit-box">
+        <br>
+        <div class="edit-info">
+          <table>
+            <tbody>
+              <tr>
+                <td id="edit-comment"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div><br>
+
+        <div class="toxic-info">
+          <div>
+            <h2>Incivility Label</h2>
+            <div class="toxicity">
+              <div id="label"></div>
+              <div id="experimental"></div>
+            </div>
+          </div><br>
+          <div class="action">
+            <form method="post" action="/retrieve">
+              <div class="w3-center">
+                <input type="checkbox" id="flag" name="flag" value="flag">
+                <label for="flag">Flag incivility score?</label>
+                <div class="radio-toolbar">
+
+                  <input type="radio" id="good" name="btn" value="g" checked>
+                  <label for="good">Looks good (g)</label>
+
+                  <input type="radio" id="notsure" name="btn" value="ns">
+                  <label for="notsure">Not sure (n)</label>
+
+                  <input type="radio" id="report" name="btn" value="r">
+                  <label for="report">Should report (r)</label>
+                </div>
+                <input id="submit" type="submit" value="Submit" />
+              </div>
+            </form>
+          </div><br>
+        </div>
+      </div>
+    </section>
   </body>
+
 </html>
