--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,17 +71,14 @@
               End Date: <input type="text" name="endDate" id="endDate" </input>
               <input type="submit">
               </form>
+              </form> -->
               <form action="#" id="userForm" onsubmit="getComments('user'); return false">
                 Query by Username(s)
-              <input type="text" name="user" id="userNames" ></input>
-               <br/>
-              Start Date: <input type="text" name="startDate" id="startDate"></input>
-              &nbsp;
-              End Date: <input type="text" name="endDate" id="endDate" </input>
+              <input type="text" name="user" id="userNames" ></input> 
+              Number of Revisions Comments (5000 Max): <input type="text"id="numComments"></input>
               <input type="submit">
-              </form> -->
               </div>
-            
+              <br/>
             <table class="table table-fluid " id="my-table">
               <thead>
                 <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
