--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -1,10 +1,10 @@
-t<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>User Profile Page</title>
-	    <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>User Profile Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <!-- Add bootstap, jQuery, and datatables -->
         <link rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -25,7 +25,7 @@ t<!DOCTYPE html>
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
         crossorigin="anonymous"></script>
         <link rel="stylesheet"
-        href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+        href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css"->
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
         <script> 
           $(function(){
@@ -36,24 +36,40 @@ t<!DOCTYPE html>
     <body onload="getUser()">
         <div id="template"></div>
         <div class="user-profile-content">
-        	<div class="user-information">
-            	<class class="personal-information-box w3-round w3-card ">
+            <div class="user-information">
+                <class class="personal-information-box w3-round w3-card ">
                     <div id="personal-information"></div>
                 </class>
-            	<class class="incivility-box w3-round w3-card ">
+                <class class="incivility-box w3-round w3-card ">
                     <div id="incivility"></div>
                 </class>
         	</div>
         	<div class="user-edits-feed w3-round w3-card ">
         		<div id="table-container">
+                    <div>
+                        <form id="time-frame-form" action="#" onchange="getUser()" onsubmit="window.location.reload();">
+                            <label for="time-frames">Time Frame</label>
+                            <select name="time-frame" id="time-frame">
+                                <option value="0">All Time</option>
+                                <option value="365">Last Year</option>
+                                <option value="30">Last Month</option>
+                                <option value="7">Last Week</option>
+                                <option value="1">Last 24 hours</option>
+                            </select>
+                        </form>
+                    </div>
+        		</div>
+            </div>
+            <div class="user-edits-feed w3-round w3-card ">
+                <div id="table-container">
                     <table class="table table-fluid" id="my-table">
                         <thead>
                             <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
                         </thead>
                         <tbody id="edits-table" style="text-align:center;"></tbody>
                     </table>
-            	</div>
-        	</div>
+                </div>
+            </div>
         </div>
         <script src="userprofile.js"></script>
     </body>
