Changed the pages' titles; fixed user query functionality

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Discover</title>
+	    <title>CivilityCheck: Discover</title>
 	    <link rel="stylesheet" type="text/css" href="style.css">
         <!-- Add bootstap, jQuery, and datatables -->
         <link rel="stylesheet" 
@@ -50,7 +50,7 @@
             </a>
           </div>
           <div class="user-loggedin ">
-            <a href="userprofile.html">Giano II</a>
+            <a href="userprofile.html?User=Giano%20II">Giano II</a>
           </div>
         </div>
       </div>
@@ -75,12 +75,12 @@
               <input type="submit">
               </form>
               </form> -->
-              <form action="#" id="userForm"  method="GET" action="/userprofile.html">
+              <form action="#" id="userForm"  onsubmit="getComments('user'); return false">
                 Query by Username(s)
               <input type="text" name="user" id="userNames" ></input> 
               Number of Revisions Comments (5000 Max): <input type="text"id="numComments"></input>
               <input type="submit">
-              </form>
+              <!--/form-->
               </div>
               <br/>
             <table class="table table-fluid " id="my-table">
