--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -3,7 +3,7 @@
   <head>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Template</title>
+	    <title>CivilityCheck: Template</title>
 	    <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
         <!-- Add bootstap, jQuery, and datatables -->
@@ -40,7 +40,7 @@
               history
             </a>
         <div class="user-loggedin ">
-          <a href="userprofile.html">Giano II</a>
+          <a href="userprofile.html?User=Giano%20II">Giano II</a>
         </div>
       </div>
     </div>
