--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>User Profile Page</title>
+        <title>CivilityCheck: User Profile Page</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- Add bootstap, jQuery, and datatables -->
         <link rel="stylesheet" 
@@ -45,7 +45,16 @@
                 </class>
         	</div>
         	<div class="user-edits-feed w3-round w3-card ">
-        		<div id="table-container">
+                <div id="discover-loader" class="loader"></div>
+                <div id="table-container">
+                    <table class="table table-fluid" id="my-table">
+                        <thead>
+                            <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
+                        </thead>
+                        <tbody id="edits-table" style="text-align:center;"></tbody>
+                    </table>
+                </div>
+        		<!--div id="table-container">
                     <div>
                         <form id="time-frame-form" action="#" onchange="getUser()" onsubmit="window.location.reload();">
                             <label for="time-frames">Time Frame</label>
@@ -58,17 +67,7 @@
                             </select>
                         </form>
                     </div>
-        		</div>
-            </div>
-            <div class="user-edits-feed w3-round w3-card ">
-                <div id="table-container">
-                    <table class="table table-fluid" id="my-table">
-                        <thead>
-                            <tr><th class="dt-center">Incivility %</th><th class="dt-center">Revision ID</th><th class="dt-center">User Name</th><th class="dt-center">Edit Comment</th><th class="dt-center">Article</th><th class="dt-center">Date</th><th class="dt-center">Action</th></tr>
-                        </thead>
-                        <tbody id="edits-table" style="text-align:center;"></tbody>
-                    </table>
-                </div>
+        		</div-->
             </div>
         </div>
         <script src="userprofile.js"></script>
